--- a/src/projects/project.scss
+++ b/src/projects/project.scss
@@ -175,11 +175,11 @@ line-height:1.5;
 }
 
 .project_grid .project_wrapper {
-  padding-top:60px;
+  padding-top:20px;
 }
 
 .project_grid .project_wrapper .grid_item {
-padding-top:50px;
+padding-top:10px;
 }
 
 .project_related {padding-bottom:120px;
